# quiz-arena

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_STYLE.md  Dockerfile  ENGINEERING_RULES.md  IMPLEMENTATION_ARCHITECTURE.md  Makefile  NEXT_AGENT_HANDOFF.md  README.md  README_BACKEND.md  REPO_STRUCTURE.md  TECHNICAL_SPEC_ENERGY_STARS_BOT.md  TZ_DailyCup_v3_Final.docx  alembic.ini  conftest.py  daily_cup_checklist.docx  daily_cup_tz_v2.docx  docker-compose.prod.yml  docker-compose.yml  energy-system-and-monetization-strategy.md  promo_feature_TZ.docx  pyproject.toml  pytest_env_bootstrap.py
.github/: CODEOWNERS
PRODUCT/: AGENT_CONSTITUTION.md  DATA_SCHEMA.md  DEVLOG.md  ECONOMY.md  GAME_MODES.md  PRODUCT_VISION.md  TOURNAMENT_ENGINE.md  UX_FLOW.md
QuizBank/: Adjektivendungen_Beginner_Bank_A1_A2_210.csv  Akkusativ_Dativ_Bank_A1_B1_210.csv  Antonym_Match_Bank_A1_B1_210.csv  Artikel_Sprint_Bank_A1_B2_1000.csv  Artikel_Sprint_Bank_A2_B1_210.csv  LOGIK_LUECKE_Denken_auf_Deutsch_Bank_400.csv  LOGIK_LUECKE_Denken_auf_Deutsch_Bank_500.csv  LOGIK_LUECKE_Denken_auf_Deutsch_Bank_Season2_A2_B1_400.csv  Lexical_Gap_Fill_Bank_A2_B1_210.csv  Mini_Dialog_Bank_A2_B1_210.csv  Modalverben_Bank_210.csv  Negation_Quiz_Bank_A2_B1_210.csv  Plural_Check_Bank_210.csv  Plural_Check_Bank_500.csv  Possessive_Adjectives_Bank_A2_B1_210.csv  Preposition_Selection_Bank_A2_B1_210.csv  README.md  Satzbau_Bank_A2_B1_210.csv  Synonym_Match_Bank_A1_B1_210.csv  Topic_Vocabulary_Themes_Bank_A2_B1_210.csv  Verb_Conjugation_Bank_A2_B1_210.csv  W_Fragen_Bank_210.csv  W_Fragen_Bank_630.csv  logik_luecke_sheet_template.csv  quiz_bank_W_Fragen_spaced_210_DE_ONLY.xlsx  trennbare_verben_210_korrigiert.csv
alembic/: env.py  script.py.mako
app/: main.py
deploy/: Caddyfile
docs/: NEXT_AGENT_BRIEF.md  documentation_audit_2026-03-02.md  duel_turnier_v2_priority.md
reports/: chik_promo_output.csv  full_project_audit_2026-02-22.md  golden_baseline_daily_arena.txt  k6_burst_summary.json  k6_burst_summary_p2_3b.json  k6_burst_summary_resilience_2026-02-24.json  k6_duplicate_summary.json  k6_duplicate_summary_p2_3b.json  k6_peak_summary.json  k6_peak_summary_p2_3b.json  k6_peak_summary_resilience_2026-02-24.json  k6_steady_summary.json  p2_2_question_selection_hotpath_report_2026-02-22.md  p2_3_burst_gate.json  p2_3_duplicate_gate_observation.json  p2_3_load_slo_report_2026-02-22.md  p2_3_peak_gate.json  p2_3_steady_gate.json  p2_3b_burst_db_after.json  p2_3b_burst_gate.json  p2_3b_duplicate_db_delta.json  p2_3b_duplicate_gate_observation.json  p2_3b_peak_gate.json  p2_4_lockfile_quizbank_docs_report_2026-02-22.md  p3_production_resilience_report_2026-02-24.md  p3_resilience_burst_gate_2026-02-24.json  p3_resilience_k6_comparison_2026-02-24.json  p3_resilience_peak_gate_2026-02-24.json  pr_note_2026-02-23_alerts_split.md  pr_note_2026-02-23_friend_challenges_split.md  pr_note_2026-02-23_gate_setup.md  pr_note_2026-02-23_internal_promo_split.md  pr_note_2026-02-23_internal_referrals_split.md  pr_note_2026-02-23_offers_service_split.md  pr_note_2026-02-23_payments_reliability_split.md  pr_note_2026-02-23_promo_repo_split.md  pr_note_2026-02-23_promo_service_split.md  pr_note_2026-02-23_telegram_updates_split.md  pr_note_2026-02-24_ci_hardening.md  (+10 more)
(+923 files in other folders)
