[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quiz-arena-bot"
version = "0.1.0"
description = "Telegram Quiz Arena backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "aiogram>=3.13,<4.0",
  "SQLAlchemy>=2.0,<3.0",
  "asyncpg>=0.29,<1.0",
  "alembic>=1.13,<2.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "python-dotenv>=1.0,<2.0",
  "celery[redis]>=5.4,<6.0",
  "redis>=5.0,<6.0",
  "structlog>=24.0,<25.0",
  "orjson>=3.10,<4.0",
  "tenacity>=8.5,<9.0",
  "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0,<25.0",
  "isort>=5.13,<6.0",
  "pre-commit>=3.7,<4.0",
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.6,<1.0",
  "mypy>=1.11,<2.0",
  "openpyxl>=3.1,<4.0",
  "rapidfuzz>=3.9,<4.0",
  "pip-tools>=7.5,<8.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
files = ["app", "tests"]
explicit_package_bases = true
warn_unused_configs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["celery", "celery.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
  "app.api.routes.internal_referrals",
  "app.bot.handlers.gameplay",
  "app.bot.handlers.payments",
  "app.bot.handlers.promo",
  "app.bot.handlers.referral",
  "app.bot.handlers.start",
  "app.core.config",
  "app.db.repo.offers_repo",
  "app.db.repo.promo_repo",
  "app.db.repo.purchases_repo",
  "app.db.repo.users_repo",
  "app.economy.purchases.recovery",
  "app.game.sessions.service",
  "app.services.referrals_observability",
  "app.workers.tasks.payments_reliability",
  "app.workers.tasks.promo_maintenance",
  "app.workers.tasks.referrals",
]
ignore_errors = true
